# pyCella

./: LICENSE  README.md  main.py  pyproject.toml
src/pycella/: __init__.py  drossel_schwabl.py  game_of_life.py  helpers.py  host_pathogen.py  plot.py
src/scripts/: ds.py  gol.py  hp.py
