[project]
name = "pycella"
version = "0.1.0"
description = "Cellular Automata Simulations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pillow>=12.0.0",
    "scipy>=1.16.3",
]

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.14.7",
]


[project.scripts]
drossel-schwabl = "scripts.ds:main"
host-pathogen = "scripts.hp:main"
game-of-life = "scripts.gol:main"
